--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <h4>Nützliche Links</h4>
             <div class="list-group pt-2">
                 <a href="https://1drv.ms/u/s!Akx6Of8AykqvrW_MLbTG89hjQYuM?e=8hmMqd" target="_blank" class="list-group-item list-group-item-action">
-                    OneNote von Frank (Über OneDrive)
+                    <i class="fal fa-cloud"></i>&ensp;OneNote von Frank
                 </a>
                 <a href="https://1drv.ms/f/s!Akx6Of8AykqvrgeBScMyR5dRhOqS" target="_blank" class="list-group-item list-group-item-action">
-                    Notizen von Frank (Über OneDrive)
+                    <i class="fal fa-cloud"></i>&ensp;Notizen von Frank
                 </a>
             </div>
         </div>
