Added github link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <a href="https://github.com/Frolki1-Dev/WI20H23H" target="_blank" class="list-group-item list-group-item-action">
                     <i class="fab fa-github"></i>&ensp;Sourcecode von Frank (Programming Foundation)
                 </a>
+                <a href="https://github.com/Lukasthuering?tab=repositories" target="_blank" class="list-group-item list-group-item-action">
+                    <i class="fab fa-github"></i>&ensp;Sourcecode von Lukas (Programming Foundation)
+                </a>
             </div>
         </div>
         <div class="col-md-8 col-12">
