--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <a href="https://1drv.ms/u/s!Akx6Of8AykqvrW_MLbTG89hjQYuM?e=8hmMqd" target="_blank" class="list-group-item list-group-item-action">
                     <i class="fal fa-cloud"></i>&ensp;OneNote von Frank
                 </a>
-                <a href="https://1drv.ms/f/s!Akx6Of8AykqvrgeBScMyR5dRhOqS" target="_blank" class="list-group-item list-group-item-action">
-                    <i class="fal fa-cloud"></i>&ensp;Notizen von Frank
+                <a href="https://1drv.ms/u/s!Akx6Of8AykqvrWjX0FbSsS9yhmxA?e=YJD3Bs​​​​​​​" target="_blank" class="list-group-item list-group-item-action">
+                    <i class="fal fa-cloud"></i>&ensp;OneDrive von Frank
                 </a>
                 <a href="https://github.com/Frolki1-Dev/WI20H23H" target="_blank" class="list-group-item list-group-item-action">
                     <i class="fab fa-github"></i>&ensp;Sourcecode von Frank (Programming Foundation)
