--- a/index.html
+++ b/index.html
@@ -49,6 +49,57 @@
             </div>
         </div>
         <div class="col-md-8 col-12">
+            <h4>2. Semester</h4>
+            <table class="table table-striped">
+                <tr>
+                    <td>
+                        Programming Foundation II
+                    </td>
+                    <td>
+                        <a href="https://lernen.zbw.ch/course/view.php?id=297" target="_blank">
+                            <i class="fal fa-chalkboard-teacher"></i>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        UNIX<br>
+                        <small>Sobald OVA-Datei bezogen wird, sind die Anmeldedaten student/123456.</small>
+                    </td>
+                    <td>
+                        <a href="https://lernen.zbw.ch/course/view.php?id=593&section=26" target="_blank">
+                            <i class="fal fa-chalkboard-teacher"></i>
+                        </a>&ensp;
+                        <a href="https://teams.microsoft.com/l/channel/19%3adbc67db5542b4cc8b44892871777d0ad%40thread.tacv2/Unix%2520Betriebssysteme?groupId=30c09a93-7bb3-464f-a544-68efa6c30c70&tenantId=bd03bf01-4bce-4d21-9902-d9d15166b4dc" target="_blank">
+                            <i class="fal fa-folder-tree"></i> (Teams)
+                        </a>&ensp;
+                        <a href="https://1drv.ms/u/s!Akx6Of8AykqvsX1CLIl73OICs-Au?e=18GNDg">
+                            <i class="fal fa-compact-disc"></i> (Ubuntu OVA)
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Datenbank
+                    </td>
+                    <td>
+                        <a href="https://lernen.zbw.ch/course/view.php?id=593&section=9" target="_blank">
+                            <i class="fal fa-chalkboard-teacher"></i>
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Netzwerktechnik und -Services Foundation II
+                    </td>
+                    <td>
+                        <a href="https://lernen.zbw.ch/course/view.php?id=593&section=18" target="_blank">
+                            <i class="fal fa-chalkboard-teacher"></i>
+                        </a>
+                    </td>
+                </tr>
+            </table>
+            <hr>
             <h4>1. Semester</h4>
             <table class="table table-striped">
                 <tr>
