Change some stuff

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <a href="https://github.com/Frolki1-Dev/WI20H23H" target="_blank" class="list-group-item list-group-item-action">
                     <i class="fab fa-github"></i>&ensp;Sourcecode von Frank (Programming Foundation)
                 </a>
+                <a href="https://github.com/Frolki1-Dev/WebTechII" target="_blank" class="list-group-item list-group-item-action">
+                    <i class="fab fa-github"></i>&ensp;Sourcecode von Frank (WebTech II)
+                </a>
                 <a href="https://github.com/Lukasthuering?tab=repositories" target="_blank" class="list-group-item list-group-item-action">
                     <i class="fab fa-github"></i>&ensp;Sourcecode von Lukas (Programming Foundation)
                 </a>
