Change some stuff

--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                         <a href="https://teams.microsoft.com/l/channel/19%3adbc67db5542b4cc8b44892871777d0ad%40thread.tacv2/Unix%2520Betriebssysteme?groupId=30c09a93-7bb3-464f-a544-68efa6c30c70&tenantId=bd03bf01-4bce-4d21-9902-d9d15166b4dc" target="_blank">
                             <i class="fal fa-folder-tree"></i> (Teams)
                         </a>&ensp;
-                        <a href="https://1drv.ms/u/s!Akx6Of8AykqvsX1CLIl73OICs-Au?e=18GNDg">
-                            <i class="fal fa-compact-disc"></i> (Ubuntu OVA)
+                        <a href="https://1drv.ms/u/s!Akx6Of8AykqvsX1CLIl73OICs-Au?e=18GNDg" target="_blank">
+                            <i class="fal fa-compact-disc"></i> (VirtualBox)
+                        </a>
+                        <a href="https://1drv.ms/u/s!Akx6Of8AykqvshhLTa5cYT78cWgF?e=NwjRb6" target="_blank">
+                            <i class="fal fa-compact-disc"></i> (VMWare)
                         </a>
                     </td>
                 </tr>
