Change some stuff

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         Datenbank
                     </td>
                     <td>
-                        <a href="https://lernen.zbw.ch/course/view.php?id=593&section=9" target="_blank">
+                        <a href="https://lernen.zbw.ch/course/view.php?id=330" target="_blank">
                             <i class="fal fa-chalkboard-teacher"></i>
                         </a>
                     </td>
